# RoboticsWorkspace

./: .gitignore  README.md
opencv_example/: CMakeLists.txt
opencv_example/src/: main.cpp
pcl_example/: CMakeLists.txt
pcl_example/src/: main.cpp
pcl_index_extraction/: CMakeLists.txt
pcl_index_extraction/src/: main.cpp
pcl_normal/: .gitignore
pcl_normal/src/: main.cpp
pcl_normals/: .gitignore  CMakeLists.txt
pcl_normals/src/: main.cpp
pcl_planar_segmentation/: CMakeLists.txt
pcl_planar_segmentation/src/: main.cpp
pcl_visualize_segmentation/: CMakeLists.txt
pcl_visualize_segmentation/src/: main.cpp
